--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -47,7 +47,34 @@
         "daily": "Прогноз на 10 днів",
         "today": "Сьогодні",
         "tomorrow": "Завтра",
-        "weatherForecast": "Прогноз погоди"
+        "weatherForecast": "Прогноз погоди",
+        "title": "Прогноз погоди для",
+        "weeklyOverview": "Тижневий огляд",
+        "tempRange": "Діапазон температур",
+        "rainyDays": "Дощові дні цього тижня",
+        "chanceRain": "Ймовірність дощу",
+        "clear": "Ясно",
+        "highChanceRain": "☔ Очікується висока ймовірність дощу"
+    },
+    "dashboard": {
+        "title": "Панель погоди",
+        "savedCities": "Збережені міста",
+        "recentSearches": "Останні пошуки",
+        "thisWeek": "Цей тиждень",
+        "forecastLoaded": "Завантажено прогноз на 14 днів",
+        "tempTrend": "Тенденція температури (12год)",
+        "precipProb": "Ймовірність опадів",
+        "weeklyTemp": "Тижневий діапазон температур",
+        "yourActivity": "Ваша активність",
+        "currentTemp": "Поточна темп.",
+        "locations": "місць",
+        "queries": "запитів",
+        "feels": "Відчувається",
+        "gusts": "Пориви",
+        "high": "Висока",
+        "normal": "Нормальна",
+        "excellent": "Відмінна",
+        "good": "Добра"
     },
     "uvLevels": {
         "low": "Низький",
@@ -70,10 +97,24 @@
         "poor": "Погано",
         "veryPoor": "Дуже погано"
     },
+    "aqiAdvice": {
+        "good": "Якість повітря відмінна. Насолоджуйтесь активним відпочинком.",
+        "fair": "Якість повітря прийнятна для більшості людей.",
+        "moderate": "Чутливим людям варто обмежити перебування на вулиці.",
+        "poor": "Кожен може почати відчувати вплив на здоров'я.",
+        "veryPoor": "Попередження про здоров'я: всім слід обмежити перебування на вулиці."
+    },
     "map": {
         "precipitation": "Карта опадів",
         "temperature": "Температура",
         "clouds": "Хмарність"
+    },
+    "charts": {
+        "temperature": "Температура",
+        "feelsLike": "Відчувається як",
+        "probability": "Ймовірність",
+        "low": "Мін",
+        "high": "Макс"
     },
     "settings": {
         "theme": "Тема",
@@ -84,6 +125,12 @@
         "system": "Системна",
         "metric": "Метрична (°C)",
         "imperial": "Імперська (°F)"
+    },
+    "notFound": {
+        "title": "Сторінку не знайдено",
+        "message": "Схоже, ця сторінка загубилася в хмарах. Давайте повернемо вас на правильний шлях.",
+        "goHome": "На головну",
+        "viewForecast": "Переглянути прогноз"
     },
     "errors": {
         "networkError": "Помилка мережі. Перевірте підключення.",
